<resources>
    <string name="app_name">Azhagu Tamil Calendar</string>
    <string name="app_name_long">அழகு நாட்காட்டி 2025</string>
    <string name="tamil_calendar">அழகு நாட்காட்டி</string>
    <string name="raghu">இராகு</string>
    <string name="kuligai">குளிகை</string>
    <string name="emakandam">எமகண்டம்</string>
    <string name="soolam">சூலம்</string>
    <string-array name="parigaram">
        <item>வெல்லம்</item>
        <item>தயிர்</item>
        <item>பால்</item>
        <item>எண்ணெய்</item>
    </string-array>
    <string name="nazhigai">நாழிகை</string>
    <string name="colon_separator">:</string>
    <string name="raghuEmaIntrTxt">சூரிய உதயம் <b>காலை 6 மணி</b> என்ற கணிப்பில் இந்த நேரங்கள் கொடுக்கப்பட்டுள்ளன. நீங்கள் சூரிய உதய நேரம் அறிந்து அதற்கு ஏற்ற படி நேரத்தை சரி செய்து கொள்ளவும்</string>
    <string-array name="directions">
        <item>வடக்கு</item>
        <item>கிழக்கு</item>
        <item>தெற்கு</item>
        <item>மேற்கு</item>
    </string-array>
    <string name="nazhigaiTime">%1$d (%2$d ம. %3$d நி.)</string>
    <string name="raghu_ema_kuligai_title">இராகு,எமகண்டம்,குளிகை</string>
    <string name="todayRasiPalanLabel">இன்றைய ராசிபலன்</string>
    <string-array name="weekday_short_names">
        <item>தி</item>
        <item>செ</item>
        <item>பு</item>
        <item>வி்</item>
        <item>வெ</item>
        <item>ச</item>
        <item>ஞா</item>
    </string-array>
    <string-array name="weekday_names">
        <item>திங்கள்</item>
        <item>செவ்வாய்</item>
        <item>புதன்</item>
        <item>வியாழன்</item>
        <item>வெள்ளி</item>
        <item>சனி</item>
        <item>ஞாயிறு</item>
    </string-array>
    <string-array name="en_month_names">
        <item>ஜனவரி</item>
        <item>பிப்ரவரி</item>
        <item>மார்ச்</item>
        <item>ஏப்ரல்</item>
        <item>மே</item>
        <item>ஜூன்</item>
        <item>ஜூலை</item>
        <item>ஆகஸ்ட்</item>
        <item>செப்டம்பர்</item>
        <item>அக்டோபர்</item>
        <item>நவம்பர்</item>
        <item>டிசம்பர்</item>
    </string-array>
    <string-array name="tamizh_month_names">
        <item>சித்திரை</item>
        <item>வைகாசி</item>
        <item>ஆனி</item>
        <item>ஆடி</item>
        <item>ஆவணி</item>
        <item>புரட்டாசி</item>
        <item>ஐப்பசி</item>
        <item>கார்த்திகை</item>
        <item>மார்கழி</item>
        <item>தை</item>
        <item>மாசி</item>
        <item>பங்குனி</item>
    </string-array>
    <string-array name="rasi_names">
        <item>@string/mesham</item>
        <item>@string/rishabam</item>
        <item>@string/mithunam</item>
        <item>@string/kadagam</item>
        <item>@string/simmam</item>
        <item>@string/kanni</item>
        <item>@string/thulam</item>
        <item>@string/vrichagam</item>
        <item>@string/thanusu</item>
        <item>@string/magaram</item>
        <item>@string/kumbam</item>
        <item>@string/meenam</item>
    </string-array>
    <string name="mesham">மேஷம்</string>
    <string name="rishabam">ரிஷபம்</string>
    <string name="mithunam">மிதுனம்</string>
    <string name="kadagam">கடகம்</string>
    <string name="simmam">சிம்மம்</string>
    <string name="kanni">கன்னி</string>
    <string name="thulam">துலாம்</string>
    <string name="vrichagam">விருச்சிகம்</string>
    <string name="thanusu">தனுசு</string>
    <string name="magaram">மகரம்</string>
    <string name="kumbam">கும்பம்</string>
    <string name="meenam">மீனம்</string>
    <string name="nallaNeramLabel">நல்ல நேரம்</string>
    <string name="nallaNeramLabelShort">ந.நே.</string>
    <string name="gowriNallaNeramLabel">கௌரி ந. நே.</string>
    <string name="morningLabel">காலை</string>
    <string name="morningLabelShort">கா.</string>
    <string name="panchangamLabel">இன்றைய பஞ்சாங்கம்</string>
    <string name="thitiLabel">திதி</string>
    <string name="starLabel">நட்சத்திரம்</string>
    <string name="karanamLabel">கரணம்</string>
    <string name="yogamLabel">யோகம்</string>
    <string name="weekLabel">வாரம்</string>
    <string name="raaghuEmaKuligaiLabel">இராகு,எம,குளிகை காலம்</string>
    <string name="vaaraSoolaiLabel">வாரசூலை</string>
    <string name="eveningLabel">மாலை</string>
    <string name="eveningLabelShort">மா.</string>
    <string name="gowriPanchangamLabel">கௌரி பஞ்சாங்கம்</string>
    <string name="kalamLabel">காலம்</string>
    <string name="dayLabel">பகல்</string>
    <string name="nightLabel">இரவு</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="graha_orai_label">கிரஹ ஓரை பஞ்சாங்கம்</string>
    <string name="laknamLabel">லக்கினம்</string>
    <string name="timeLabel">நேரம்</string>
    <string name="valapirai_muhurthams">வளர்பிறை முகூர்த்தங்கள்</string>
    <string name="theipirai_muhurthams">தேய்பிறை முகூர்த்தங்கள்</string>
    <string name="valapirai">வளர்பிறை</string>
    <string name="theipirai">தேய்பிறை</string>
    <string-array name="gowri_values">
        <item>ரோகம்</item>
        <item>சோரம்</item>
        <item>விஷம்</item>
        <item>லாபம்*</item>
        <item>தனம்*</item>
        <item>சுகம்*</item>
        <item>உத்தி*</item>
        <item>அமிர்த*</item>
    </string-array>
    <string-array name="orai_values">
        <item>சூரியன்</item>
        <item>சுக்கிரன்*</item>
        <item>புதன்*</item>
        <item>சந்திரன்*</item>
        <item>சனி</item>
        <item>குரு*</item>
        <item>செவ்வாய்</item>
    </string-array>
    <string-array name="thiti_names">
        <item>அமாவாசை</item>
        <item>பிரதமை</item>
        <item>துவிதியை</item>
        <item>திருதியை</item>
        <item>சதுர்த்தி</item>
        <item>பஞ்சமி</item>
        <item>சஷ்டி</item>
        <item>சப்தமி</item>
        <item>அஷ்டமி</item>
        <item>நவமி</item>
        <item>தசமி</item>
        <item>ஏகாதசி</item>
        <item>துவாதசி</item>
        <item>திரயோதசி</item>
        <item>சதுர்த்தசி</item>
        <item>பௌர்ணமி</item>
        <item>பிரதமை</item>
        <item>துவிதியை</item>
        <item>திருதியை</item>
        <item>சதுர்த்தி</item>
        <item>பஞ்சமி</item>
        <item>சஷ்டி</item>
        <item>சப்தமி</item>
        <item>அஷ்டமி</item>
        <item>நவமி</item>
        <item>தசமி</item>
        <item>ஏகாதசி</item>
        <item>துவாதசி</item>
        <item>திரயோதசி</item>
        <item>சதுர்த்தசி</item>
    </string-array>
    <string-array name="star_names">
        <item>அஸ்வினி</item>
        <item>பரணி</item>
        <item>கார்த்திகை</item>
        <item>ரோகிணி</item>
        <item>மிருகசீரிடம்</item>
        <item>திருவாதிரை</item>
        <item>புனர்பூசம்</item>
        <item>பூசம்</item>
        <item>ஆயில்யம்</item>
        <item>மகம்</item>
        <item>பூரம்</item>
        <item>உத்தரம்</item>
        <item>அஸ்தம்</item>
        <item>சித்திரை</item>
        <item>சுவாதி</item>
        <item>விசாகம்</item>
        <item>அனுஷம்</item>
        <item>கேட்டை</item>
        <item>மூலம்</item>
        <item>பூராடம்</item>
        <item>உத்திராடம்</item>
        <item>திருவோணம்</item>
        <item>அவிட்டம்</item>
        <item>சதயம்</item>
        <item>பூரட்டாதி</item>
        <item>உத்திரட்டாதி</item>
        <item>ரேவதி</item>
    </string-array>
    <string-array name="yogam_names">
        <item>சித்தயோகம்</item>
        <item>அமிர்தயோகம்</item>
        <item>மரணயோகம்</item>
    </string-array>
    <string name="empty_muhurtham_msg">%1$s மாதத்தில் சுபமுகூர்த்தம் ஏதும் இல்லை.</string>
    <string name="daily_calendar_txt">நாட்காட்டி</string>
    <string name="monthly_calendar_txt">மாத காட்டி</string>
    <string name="karananLabel">கரணன்</string>
    <string name="sunriseLabel">சூரிய உதயம்</string>
    <string name="sunrise_laknam_msg">%1$s லக்னம் இருப்பு நா. %2$s வி. %3$s</string>
    <string name="fullday_pangachangam">இன்று முழுவதும் %1$s</string>
    <string name="two_panchangam">இன்று %1$s வரை %2$s பின்பு %3$s</string>
    <string name="three_panchangam">இன்று %1$s வரை %3$s பின்பு %2$s வரை %4$s பின்பு %5$s</string>
    <string name="four_panchangam">இன்று %1$s வரை %4$s பின்பு %2$s வரை %5$s பின்பு %3$s வரை %6$s பின்பு %7$s</string>
    <string name="govtHoliday">அரசு விடுமுறை</string>
    <string name="chandrastamamLabel">சந்திராஷ்டமம்</string>
    <string name="today_new_moon">இன்று அமாவாசை</string>
    <string name="today_full_moon">இன்று பௌர்ணமி</string>
    <string name="today_waxing_moon">இன்று வளர்பிறை</string>
    <string name="today_waning_moon">இன்று தேய்பிறை</string>
    <string name="mel_nokku_naal">"இன்று மேல்நோக்கு நாள் "</string>
    <string name="kizh_nokku_naal">இன்று கீழ்நோக்கு நாள்</string>
    <string name="sama_nokku_naal">இன்று சமநோக்கு நாள்</string>
    <string name="suba_muhurtham">%1$s சுப முகூர்த்தம்</string>
    <string name="kari_naal">கரிநாள்</string>
    <string name="monthly_suba_muhurtham_title">சுபமுகூர்த்த தினங்கள்</string>
    <string name="muhurtham_msg">%1$d %2$s - %3$s %4$d</string>
    <string name="hindu_festivals">இந்து பண்டிகைகள்</string>
    <string name="govtHolidays">அரசு விடுமுறை நாட்கள்</string>
    <string name="viratha_thinangal">விரத நாட்கள்</string>
    <string name="amavasaiTxt">அமாவாசை</string>
    <string name="pournamiTxt">பௌர்ணமி</string>
    <string name="karthigaiTxt">கார்த்திகை</string>
    <string name="sivarathriTxt">சிவராத்திரி</string>
    <string name="sankada_chathurthi_txt">சங்கடஹர சதுர்த்தி</string>
    <string name="chathurthiTxt">சதுர்த்தி</string>
    <string name="thiruvonamTxt">திருவோண விரதம்</string>
    <string name="shastiValarpiraiTxt">சஷ்டி(வளர்பிறை)விரதம்</string>
    <string name="shastiTxt">சஷ்டி விரதம்</string>
    <string name="pradosamValarPiraiTxt">வளர்பிறை பிரதோஷம்</string>
    <string name="ekadeshiTxt">ஏகாதசி</string>
    <string name="pradosamTheiPiraiTxt">தேய்பிறை பிரதோஷம்</string>
    <string name="otherDays">மற்ற நாட்கள்</string>
    <string name="astamiTxt">அஷ்டமி</string>
    <string name="navamiTxt">நவமி</string>
    <string name="kariNaalTxt">கரி நாட்கள்</string>
    <string name="muhurtham_days">முகூர்த்த நாட்கள்</string>
    <string name="asuba_days">கரி நாட்கள், அஷ்டமி, நவமி</string>
    <string name="vasthu">வாஸ்து</string>
    <string name="vasthu_days">வாஸ்து நாட்கள்</string>
    <string name="manaiyadi_label">மனையடி சாஸ்திரம்</string>
    <string name="christian_festivals">கிறிஸ்தவ பண்டிகைகள்</string>
    <string name="muslim_festivals">முஸ்லிம் பண்டிகைகள்</string>
    <string name="holidaysAndFestivals">பண்டிகை / விடுமுறை நாட்கள்</string>
    <string name="empty_festival_msg">%1$s மாதத்தில் %2$s இல்லை</string>
    <string name="settings">அமைப்புகள்</string>
    <string name="body_part">உறுப்பு</string>
    <string name="left_side_txt">இடது</string>
    <string name="right_side_txt">வலது</string>
    <string name="palli_palan">பல்லி விழும் பலன்கள்</string>
    <string name="theme">Theme</string>
    <string name="default_txt">Default</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="general_notifications">General Notifications</string>
    <string name="Grey">Grey</string>
    <string name="Orange">Orange</string>
    <string name="Night">Dark</string>
</resources>