<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/actionBarItemBackground"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="?attr/actionMenuTextColor"
            app:title="@string/settings"
            app:titleTextColor="?attr/actionMenuTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/bgSubTitle"
                android:paddingHorizontal="10pt"
                android:paddingVertical="5pt"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/tcSubTitle" />

            <RadioGroup
                android:id="@+id/radioTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5pt"
                android:paddingHorizontal="10pt">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:id="@+id/themeDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_txt"
                    android:background="@color/purple_700"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeRed"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/red_2"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:text="@string/red"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/green2"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:text="@string/green"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeGrey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/teal_500"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:text="@string/Grey"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeOrange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/orange_2"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:text="@string/Orange"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/themeNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:text="@string/Night"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:theme="@style/Widget.Material3.CompoundButton.RadioButton" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/bgSubTitle"
            android:orientation="horizontal"
            android:paddingHorizontal="10pt"
            android:paddingVertical="5pt">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/general_notifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/tcSubTitle"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/general_notification"
                android:layout_width="wrap_content"
                android:backgroundTint="?attr/tcSubTitle"
                android:button="?attr/tcSubTitle"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical" />

        </LinearLayout>
    </LinearLayout>
</layout>