<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/panchangamTxt"
                android:text="@string/gowriPanchangamLabel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:paddingVertical="2dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/kalamLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/dayLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@string/nightLabel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform" />
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/teal_200" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/panchangamRecyclerView"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_height="match_parent"
                tools:listitem="@layout/panchangam_item" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>